--- a/style.css
+++ b/style.css
@@ -70,10 +70,11 @@ body{
      .contentthree-container ul,li{
         font-size: 23px;
         }
-        .image-content{
-            max-width: 100vh!important;
-            min-height: 100%;
+        .bottom-navbar{
+            position: relative;
+            top: 62px!important;
            }
+           
  }
  
  @media (min-width: 992px) and (max-width: 1440px) {
@@ -101,12 +102,10 @@ body{
      .contentthree-container ul,li{
         font-size: 18px;
         }
-        .image-content{
-            min-height: 50%;
-           }
+
            .bottom-navbar{
             position: relative;
-            top: 59px!important;
+            top: 55px!important;
            }
 
  }
@@ -146,10 +145,10 @@ body{
      .contentthree-container ul,li{
         font-size: 18px;
         }
-        .image-content{
-            max-width: 90%!important;
-      max-height: 20%!important;
-           }
+        .homepage{
+            position: relative;
+            top: 53px!important;
+        }
 
  }
 
@@ -184,13 +183,14 @@ background-color: #285531;
     display: flex;
     list-style-type: none;
     color: white;
-
+    margin: 0!important;
 }
 
 .right ul{
     list-style-type: none;
     display: flex;
     color: white;
+    margin: 0!important;
 }
 .logo_main{
     position: absolute;
@@ -202,10 +202,11 @@ background-color: #285531;
     margin: auto;
 }
 .logo_main img{
-    width: 150px;
+    width: 180px;
 }
 
 .navbar-toggler,
+.btn-close,
 .navbar-toggler:focus,
 .navbar-toggler:active,
 .navbar-toggler-icon:focus {
@@ -227,6 +228,10 @@ background-color: #fff;
 width: 100%;
 color: #285531;
 font-weight: bold;
+}
+.bottom-navbar a {
+    color: #285531!important;
+    font-weight: bold!important;
 }
 .left-bottom-navbar ul{
     display: flex;
@@ -287,6 +292,12 @@ color: #285531;
     width: 100%;
     height: 100%;
   }
+  .image-content {
+    position: relative;
+    width: calc(100vw - 50%);
+    max-width: 150%;
+    height: 100%;
+  }
 
   .box {
     background-color: #285531;
@@ -310,6 +321,7 @@ color: #285531;
     border-right: none;
     border-left: 80px solid #285531;
     border-bottom: 80px solid transparent;
+    z-index: 1;
   }
   .contenttwo-text {
     font-size: 50px;
@@ -380,4 +392,9 @@ color: #285531;
 }
 .footer-bottom p{
     font-size: 15px!important;
+}
+
+a {
+    text-decoration: none!important;
+    color: white!important;
 }
