--- a/style.css
+++ b/style.css
@@ -107,6 +107,9 @@ body{
             position: relative;
             top: 55px!important;
            }
+           .logo_main img{
+            width: 150px!important;
+        }
 
  }
 
@@ -148,6 +151,9 @@ body{
         .homepage{
             position: relative;
             top: 53px!important;
+        }
+        .logo_main img{
+            width: 120px!important;
         }
 
  }
@@ -338,6 +344,9 @@ color: #285531;
     display: inline-block;
     margin-right: 10px;
   }
+  .image-container img{
+    min-height: 400px;
+  }
   .image-text {
     position: absolute;
     bottom: 25px;
@@ -372,6 +381,7 @@ color: #285531;
 }
 .footer ul{
     list-style-type: none;
+    padding-left: 0;
 }
 .footeraccept{
     font-size: 12px;
