--- a/style3.css
+++ b/style3.css
@@ -110,6 +110,9 @@ body{
             position: relative;
             top: 55px!important;
            }
+           .logo_main img{
+            width: 150px!important;
+        }
 
 
  }
@@ -153,6 +156,9 @@ body{
            .page1{
             position: relative;
             top: 53px!important;
+        }
+        .logo_main img{
+            width: 120px!important;
         }
 
  }
@@ -349,6 +355,9 @@ color: #285531;
     display: inline-block;
     margin-right: 10px;
   }
+  .image-container img{
+    min-height: 400px;
+  }
   .image-text {
     position: absolute;
     bottom: 25px;
@@ -383,6 +392,7 @@ color: #285531;
 }
 .footer ul{
     list-style-type: none;
+    padding-left: 0;
 }
 .footeraccept{
     font-size: 12px;
