--- a/style.css
+++ b/style.css
@@ -57,22 +57,55 @@ body{
         font-weight: bolder!important;
      }
      p{
-        font-size: 30px!important;
+        font-size: 20px!important;
      }
      h5{
-        font-size: 28px!important;
+        font-size: 23px!important;
         font-weight: bold!important;
         color: #285531!important;
      }
      h6{
-        font-size: 20px!important;
+        font-size: 18px!important;
      }
      .contentthree-container ul,li{
-        font-size: 23px;
+        font-size: 20px;
         }
         .bottom-navbar{
             position: relative;
-            top: 62px!important;
+            top: 45px!important;
+           }
+           .top-navbar a {
+            font-size: 15px;
+           }
+           .top-navbar li {
+            font-size: 15px;
+           }
+           .top-navbar svg{
+            padding: 3px;
+           }
+           .line{
+            border-right: 2px solid white;
+            height: 20px;
+            display: flex;
+            align-items: center;
+           }
+           .line3{
+            border-right: 2px solid white;
+            height: 15px;
+            display: flex;
+            align-items: center;
+           }
+           .line2{
+            border-right: 2px solid #285531;
+            height: 18px;
+            display: flex;
+            align-items: center;
+           }
+           .bottom-navbar a {
+            font-size: 15px;
+           }
+           .bottom-navbar ul{
+            margin: 0;
            }
            
  }
@@ -83,10 +116,10 @@ body{
         font-weight: bolder!important;
      }
      p{
-        font-size: 20px!important;
+        font-size: 18px!important;
      }
      h5{
-        font-size: 18px!important;
+        font-size: 16px!important;
         font-weight: bold!important;
         color: #285531!important;
      }
@@ -94,10 +127,10 @@ body{
         font-size: 15px!important;
      }
      .button-main {
-        font-size: 25px!important;
+        font-size: 20px!important;
      }
      .footer-right p {
-        font-size: 18px!important;
+        font-size: 15px!important;
      }
      .contentthree-container ul,li{
         font-size: 18px;
@@ -105,15 +138,18 @@ body{
 
            .bottom-navbar{
             position: relative;
-            top: 55px!important;
+            top: 45px!important;
            }
            .logo_main img{
-            width: 150px!important;
+            width: 120px!important;
         }
 
  }
 
  @media  (max-width: 991px) {
+    .col-md-4{
+        max-width: 300px!important;
+    }
     h1{
         font-size: 30px!important;
         font-weight: bolder!important;
@@ -122,12 +158,12 @@ body{
         font-size: 15px!important;
      }
      h5{
-        font-size: 20px!important;
+        font-size: 17px!important;
         font-weight: bold!important;
         color: #285531!important;
      }
      h6{
-        font-size: 18px!important;
+        font-size: 15px!important;
      }
      .box.arrow-right:after{
         display: none;
@@ -160,6 +196,34 @@ body{
 
 
 /* Navbar */
+.top-navbar a {
+    font-size: 15px;
+   }
+   .top-navbar li {
+    font-size: 15px;
+   }
+   .top-navbar svg{
+    padding: 3px;
+   }
+   .bottom-navbar a {
+    font-size: 15px;
+   }
+   .bottom-navbar ul{
+    margin: 0;
+   }
+
+.line{
+    border-right: 2px solid white;
+    height: 20px;
+    display: flex;
+    align-items: center;
+   }
+   .line2{
+    border-right: 2px solid #285531;
+    height: 18px;
+    display: flex;
+    align-items: center;
+   }
 .homepage{
     font-family: 'Source Sans 3', sans-serif;
     position: relative;
@@ -208,7 +272,7 @@ background-color: #285531;
     margin: auto;
 }
 .logo_main img{
-    width: 180px;
+    width: 150px;
 }
 
 .navbar-toggler,
@@ -262,7 +326,7 @@ font-weight: bold;
 .hero{
     background-image:url(images/Layer\ 110.png);
     background-size: cover;
-    height: 700px;
+    height: 550px;
 
 }
 .contentone-h{
@@ -276,7 +340,7 @@ color: #285531;
     top: 150px;
 }
 .container-box img{
-    max-width: 250px;
+    max-width: 290px;
 }
 
 .contenttwo{
@@ -301,7 +365,7 @@ color: #285531;
   .image-content {
     position: relative;
     width: calc(100vw - 50%);
-    max-width: 150%;
+    max-width: 130%;
     height: 100%;
   }
 
@@ -314,7 +378,7 @@ color: #285531;
     float: left;
   }
   .box button{
-    font-size: 40px;
+    font-size: 35px;
     color: #285531;
   }
 
@@ -392,13 +456,22 @@ color: #285531;
 .footer-top{
     font-size: 20px;
 }
+.footer p {
+    font-size: 15px!important;
+}
+.footer a {
+    font-size: 15px;
+}
 .footer button{
-    font-size: 20px;
     color:white;
     background-color: #e38a40;
     border: none;
     padding-left: 15px;
     padding-right: 15px;
+}
+.footer-button2{
+    max-height: 40px;
+    background-color: #285531!important;
 }
 .footer-bottom p{
     font-size: 15px!important;
@@ -407,4 +480,64 @@ color: #285531;
 a {
     text-decoration: none!important;
     color: white!important;
+}
+
+.szechenyi{
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    width: 250px;
+}
+
+/*layout1*/
+
+/* .contentfour-container{
+    padding-left: 80px!important;
+    padding-right: 80px!important;
+} */
+@media (max-width: 2576px) {
+.footer-bottome2 ul, .footer-bottome2 p{
+    display: none!important;
+}
+}
+
+@media (min-width: 992px) and (max-width: 1440px) {
+    .contentthree h1{
+        font-size: 30px!important;
+    }
+.contentthree li{
+    font-size: 15px;
+}
+.contentthree p {
+    font-size: 15px!important;
+    margin: 0;
+}
+.contentthree button {
+    font-size: 15px!important;
+}
+.contentthree span{
+    font-size: 15px;
+}
+
+}
+
+@media  (max-width: 991px) {
+.left-footer{
+    display: flex;
+    justify-content: center;
+}
+.footer-bottome2 ul, .footer-bottome2 p{
+    display: flex!important;
+    justify-content: center!important;
+}
+.footer-bottome2 a, .footer-bottome2 p{
+    font-size: 12px!important;
+}
+.footer-bottom ul, .footer-bottom p{
+    display: none!important;
+}
+.contentfour-image{
+    display: flex!important;
+    justify-content: center!important;
+}
 }
