--- a/style3.css
+++ b/style3.css
@@ -57,10 +57,10 @@ body{
         font-weight: bolder!important;
      }
      p{
-        font-size: 30px!important;
+        font-size: 20px!important;
      }
      h5{
-        font-size: 28px!important;
+        font-size: 23px!important;
         font-weight: bold!important;
         color: #285531!important;
      }
@@ -73,7 +73,7 @@ body{
 
            .bottom-navbar{
             position: relative;
-            top: 63px!important;
+            top: 45px!important;
            }
 
  }
@@ -84,10 +84,10 @@ body{
         font-weight: bolder!important;
      }
      p{
-        font-size: 20px!important;
+        font-size: 18px!important;
      }
      h5{
-        font-size: 18px!important;
+        font-size: 16px!important;
         font-weight: bold!important;
         color: #285531!important;
      }
@@ -95,7 +95,7 @@ body{
         font-size: 15px!important;
      }
      .button-main {
-        font-size: 25px!important;
+        font-size: 20px!important;
      }
      .footer-right p {
         font-size: 18px!important;
@@ -108,10 +108,10 @@ body{
            }
            .bottom-navbar{
             position: relative;
-            top: 55px!important;
+            top: 45px!important;
            }
            .logo_main img{
-            width: 150px!important;
+            width: 120px!important;
         }
 
 
@@ -126,19 +126,26 @@ body{
         font-size: 15px!important;
      }
      h5{
-        font-size: 20px!important;
+        font-size: 17px!important;
         font-weight: bold!important;
         color: #285531!important;
      }
      h6{
-        font-size: 18px!important;
+        font-size: 15px!important;
      }
      .box.arrow-right:after{
         display: none;
      }
      /* .image-content {
-        max-width: 95%!important;
+        display:none
      } */
+     .image-content{
+        margin-bottom: 25px;
+     }
+     .image-bottom{
+        background-color: #285531!important;
+     }
+
      .image-box{
         display: flex;
         justify-content: center;
@@ -176,6 +183,39 @@ a{
 } */
 
 /* Navbar */
+.top-navbar a {
+    font-size: 15px;
+   }
+   .top-navbar li {
+    font-size: 15px;
+   }
+   .top-navbar svg{
+    padding: 3px;
+   }
+   .bottom-navbar a {
+    font-size: 15px;
+   }
+   .bottom-navbar ul{
+    margin: 0;
+   }
+.line{
+    border-right: 2px solid white;
+    height: 20px;
+    display: flex;
+    align-items: center;
+   }
+   .line2{
+    border-right: 2px solid #285531;
+    height: 18px;
+    display: flex;
+    align-items: center;
+   }
+   .line3{
+    border-right: 2px solid white;
+    height: 15px;
+    display: flex;
+    align-items: center;
+   }
 .page1{
     font-family: 'Source Sans 3', sans-serif;
     position: relative;
@@ -224,7 +264,7 @@ background-color: #285531;
     margin: auto;
 }
 .logo_main img{
-    width: 180px;
+    width: 150px;
 }
 
 .navbar-toggler,
@@ -280,7 +320,7 @@ font-weight: bold;
 .layout2-hero{
     background-image:url(images/Layer\ 118.png);
     background-size: cover;
-    height: 700px;
+    height: 550px;
 
 }
 .contentone-h{
@@ -333,7 +373,7 @@ color: #285531;
     content: " ";
     position: absolute;
     right: -50px;
-    top: 150px;
+    top: 50px;
     border-top: 80px solid transparent;
     border-right: none;
     border-left: 80px solid #285531;
@@ -404,7 +444,6 @@ color: #285531;
     font-size: 20px;
 }
 .footer button{
-    font-size: 20px;
     color:white;
     background-color: #e38a40;
     border: none;
@@ -422,6 +461,18 @@ color: #285531;
     text-decoration: none!important;
     color: white!important;
 }
+.footer a{
+    font-size: 15px!important;
+}
+.footer-bottom p{
+    font-size: 13px!important;
+}
+.szechenyi{
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    width: 250px;
+}
 
 /*layout2*/
 
@@ -429,3 +480,28 @@ color: #285531;
     display: flex;
 align-items: flex-end;
 }
+
+@media  (max-width: 991px) {
+    .layout2-box{
+    
+    }
+    .footer-button-container{
+        display: flex!important;
+        justify-content: center!important;
+    }
+    .footer li{
+        display: flex!important;
+        flex-direction: column;
+        justify-content: center!important;
+        align-items: center;
+    }
+    .footer-bottom {
+        display: flex!important;
+        justify-content: center!important;
+        padding-left: 30px!important;
+    }
+    .socialmedia{
+        display: flex;
+        justify-content: center;
+    }
+    }
