--- a/style4.css
+++ b/style4.css
@@ -53,22 +53,22 @@ body{
 
  @media (max-width: 2576px) {
     h1{
-        font-size: 50px!important;
+        font-size: 40px!important;
         font-weight: bolder!important;
      }
      p{
-        font-size: 30px!important;
+        font-size: 20px!important;
      }
      h5{
-        font-size: 28px!important;
+        font-size: 23px!important;
         font-weight: bold!important;
         color: #285531!important;
      }
      h6{
-        font-size: 20px!important;
+        font-size: 18px!important;
      }
      .contentthree-container ul,li{
-        font-size: 23px;
+        font-size: 20px;
         }
         .image-content {
             position: relative;
@@ -79,7 +79,7 @@ body{
           }
            .bottom-navbar{
             position: relative;
-            top: 53px!important;
+            top: 45px!important;
            }
            
  }
@@ -90,10 +90,10 @@ body{
         font-weight: bolder!important;
      }
      p{
-        font-size: 20px!important;
+        font-size: 18px!important;
      }
      h5{
-        font-size: 18px!important;
+        font-size: 16px!important;
         font-weight: bold!important;
         color: #285531!important;
      }
@@ -101,10 +101,10 @@ body{
         font-size: 15px!important;
      }
      .button-main {
-        font-size: 25px!important;
+        font-size: 20px!important;
      }
      .footer-right p {
-        font-size: 18px!important;
+        font-size: 15px!important;
      }
      .contentthree-container ul,li{
         font-size: 18px;
@@ -114,10 +114,10 @@ body{
            }
            .bottom-navbar{
             position: relative;
-            top: 53px!important;
+            top: 45px!important;
            }
            .logo_main img{
-            width: 150px!important;
+            width: 120px!important;
         }
 
  }
@@ -131,12 +131,12 @@ body{
         font-size: 15px!important;
      }
      h5{
-        font-size: 20px!important;
+        font-size: 16px!important;
         font-weight: bold!important;
         color: #285531!important;
      }
      h6{
-        font-size: 18px!important;
+        font-size: 15px!important;
      }
      .box.arrow-right:after{
         display: none;
@@ -173,7 +173,7 @@ body{
         }
         .search-container{
             position: fixed;
-            top: 50px!important;
+            top: 45px!important;
         }
         .logo_main img{
             width: 120px!important;
@@ -193,6 +193,41 @@ a{
 } */
 
 /* Navbar */
+
+
+.top-navbar a {
+    font-size: 15px;
+   }
+   .top-navbar li {
+    font-size: 15px;
+   }
+   .top-navbar svg{
+    padding: 3px;
+   }
+   .bottom-navbar a {
+    font-size: 15px;
+   }
+   .bottom-navbar ul{
+    margin: 0;
+   }
+.line{
+    border-right: 2px solid white;
+    height: 20px;
+    display: flex;
+    align-items: center;
+   }
+   .line2{
+    border-right: 2px solid #285531;
+    height: 18px;
+    display: flex;
+    align-items: center;
+   }
+   .line3{
+    border-right: 2px solid white;
+    height: 15px;
+    display: flex;
+    align-items: center;
+   }
 .page1{
     font-family: 'Source Sans 3', sans-serif;
     position: relative;
@@ -242,7 +277,7 @@ background-color: #285531;
     margin: auto;
 }
 .logo_main img{
-    width: 180px;
+    width: 150px;
 }
 
 .navbar-toggler,
@@ -278,8 +313,6 @@ font-weight: bold;
 .right-bottom-navbar ul{
     display: flex;
     align-items: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
 
 }
 
@@ -299,7 +332,7 @@ font-weight: bold;
     background-image:url(images/Layer\ 27.png);
     background-size: cover;
     background-position: bottom;
-    height: 700px;
+    height: 500px;
 
 }
 .contentone-h{
@@ -338,6 +371,9 @@ color: #285531;
     width: 100%;
     height: 100%;
   }
+  /* .col-md-4{
+    max-width: 300px!important;
+  } */
   .image-container img {
     object-fit: cover;
     width: 100%;
@@ -353,7 +389,7 @@ color: #285531;
     float: right;
   }
   .box button{
-    font-size: 40px;
+    font-size: 30px;
     color: #285531;
 
   }
@@ -457,7 +493,6 @@ color: #285531;
     font-size: 20px;
 }
 .footer button{
-    font-size: 20px;
     color:white;
     background-color: #e38a40;
     border: none;
@@ -474,6 +509,18 @@ color: #285531;
 .footer-button{
     max-height: 40px;
     background-color: #285531!important;
+}
+.footer a{
+    font-size: 15px!important;
+}
+.footer-bottom p{
+    font-size: 13px!important;
+}
+.szechenyi{
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    width: 250px;
 }
 
 
@@ -497,7 +544,7 @@ align-items: flex-end;
     background-color: #b4c79e;
     color: #285531;
     position: fixed;
-    top: 125px;
+    top: 97px;
     width: 100%;
     /* display: none; */
 }
@@ -527,3 +574,41 @@ color: #285531;
     text-decoration: underline!important;
     color: #285531!important;
 }
+
+@media  (max-width: 991px) {
+    .col-md-4{
+        max-width: 400px!important;
+    }
+    .layout2-box{
+    
+    }
+    .footer-button-container{
+        display: flex!important;
+        justify-content: center!important;
+    }
+    .footer li{
+        display: flex!important;
+        flex-direction: column;
+        justify-content: center!important;
+        align-items: center;
+    }
+    .footer-bottom {
+        display: flex!important;
+        justify-content: center!important;
+        padding-left: 30px!important;
+    }
+    .socialmedia{
+        display: flex;
+        justify-content: center;
+    }
+    .input-group{
+        display: flex;
+        flex-wrap: column!important;
+        align-items: center!important;
+        justify-content: space-evenly;
+        gap: 4px!important;
+    }
+    .input-group input{
+        min-width: 200px!important;
+    }
+    }
