--- a/style5.css
+++ b/style5.css
@@ -57,18 +57,18 @@ body{
         font-weight: bolder!important;
      }
      p{
-        font-size: 25px!important;
+        font-size: 20px!important;
      }
      h5{
-        font-size: 28px!important;
+        font-size: 23px!important;
         font-weight: bold!important;
         color: #285531!important;
      }
      h6{
-        font-size: 20px!important;
+        font-size: 18px!important;
      }
      .contentthree-container ul,li{
-        font-size: 23px;
+        font-size: 20px;
         }
         .image-content {
             position: relative;
@@ -79,7 +79,7 @@ body{
           }
            .bottom-navbar{
             position: relative;
-            top: 53px!important;
+            top: 45px!important;
            }
            
  }
@@ -90,10 +90,10 @@ body{
         font-weight: bolder!important;
      }
      p{
-        font-size: 20px!important;
+        font-size: 18px!important;
      }
      h5{
-        font-size: 18px!important;
+        font-size: 16px!important;
         font-weight: bold!important;
         color: #285531!important;
      }
@@ -101,7 +101,7 @@ body{
         font-size: 15px!important;
      }
      .button-main {
-        font-size: 25px!important;
+        font-size: 20px!important;
      }
      .footer-right p {
         font-size: 18px!important;
@@ -114,10 +114,10 @@ body{
            }
            .bottom-navbar{
             position: relative;
-            top: 53px!important;
+            top: 45px!important;
            }
            .logo_main img{
-            width: 150px!important;
+            width: 120px!important;
         }
 
  }
@@ -193,6 +193,40 @@ a{
 } */
 
 /* Navbar */
+
+.top-navbar a {
+    font-size: 15px;
+   }
+   .top-navbar li {
+    font-size: 15px;
+   }
+   .top-navbar svg{
+    padding: 3px;
+   }
+   .bottom-navbar a {
+    font-size: 15px;
+   }
+   .bottom-navbar ul{
+    margin: 0;
+   }
+.line{
+    border-right: 2px solid white;
+    height: 20px;
+    display: flex;
+    align-items: center;
+   }
+   .line2{
+    border-right: 2px solid #285531;
+    height: 18px;
+    display: flex;
+    align-items: center;
+   }
+   .line3{
+    border-right: 2px solid white;
+    height: 15px;
+    display: flex;
+    align-items: center;
+   }
 .page1{
     font-family: 'Source Sans 3', sans-serif;
     position: relative;
@@ -242,7 +276,7 @@ background-color: #285531;
     margin: auto;
 }
 .logo_main img{
-    width: 180px;
+    width: 150px;
 }
 
 .navbar-toggler,
@@ -278,9 +312,6 @@ font-weight: bold;
 .right-bottom-navbar ul{
     display: flex;
     align-items: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-
 }
 
 .bottom-navbar ul{
@@ -297,7 +328,7 @@ font-weight: bold;
 
 .layout2-hero{
     background-image:url(images/Layer\ 123.png);
-    background-size: cover;
+    background-size:cover;
     background-position: bottom;
     height: 700px;
 
@@ -457,7 +488,6 @@ color: #285531;
     font-size: 20px;
 }
 .footer button{
-    font-size: 20px;
     color:white;
     background-color: #e38a40;
     border: none;
@@ -474,6 +504,18 @@ color: #285531;
 .footer-button{
     max-height: 40px;
     background-color: #285531!important;
+}
+.footer a{
+    font-size: 15px!important;
+}
+.footer-bottom p{
+    font-size: 13px!important;
+}
+.szechenyi{
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    width: 250px;
 }
 
 
@@ -529,6 +571,9 @@ color: #285531;
 }
 
 /*layout5*/
+.emblem{
+    width: 35px;
+}
 
 .search-product{
     background-color: #b4c79e;
@@ -591,3 +636,31 @@ color: #285531;
         max-width: 400px;
     }
   }
+
+  @media  (max-width: 991px) {
+    .col-md-4{
+        max-width: 400px!important;
+    }
+    .layout2-box{
+    
+    }
+    .footer-button-container{
+        display: flex!important;
+        justify-content: center!important;
+    }
+    .footer li{
+        display: flex!important;
+        flex-direction: column;
+        justify-content: center!important;
+        align-items: center;
+    }
+    .footer-bottom {
+        display: flex!important;
+        justify-content: center!important;
+        padding-left: 30px!important;
+    }
+    .socialmedia{
+        display: flex;
+        justify-content: center;
+    }
+    }
