layout1,layout3 image change

--- a/style.css
+++ b/style.css
@@ -369,7 +369,7 @@ color: #285531;
   .image-content {
     position: relative;
     width: calc(100vw - 50%);
-    max-width: 130%;
+    /* max-width: 130%; */
     height: 100%;
   }
 
