--- a/style4.css
+++ b/style4.css
@@ -79,7 +79,7 @@ body{
           }
            .bottom-navbar{
             position: relative;
-            top: 45px!important;
+            top: 43px!important;
            }
            
  }
@@ -114,7 +114,7 @@ body{
            }
            .bottom-navbar{
             position: relative;
-            top: 45px!important;
+            top: 43px!important;
            }
            .logo_main img{
             width: 120px!important;
@@ -173,11 +173,16 @@ body{
         }
         .search-container{
             position: fixed;
-            top: 45px!important;
+            top: 43px!important;
+            padding-top: 70px!important;
+            padding-bottom: 40px!important;
         }
         .logo_main img{
             width: 120px!important;
         }
+        .cotenttwo-reverse button{
+            font-size: 15px!important;
+            }
  }
 a{
     text-decoration: none!important;
@@ -356,6 +361,7 @@ color: #285531;
 .cotenttwo-reverse{
     flex-direction: row-reverse!important;
 }
+
 .contentthree-h1{
 color: #285531;
 }
@@ -544,7 +550,7 @@ align-items: flex-end;
     background-color: #b4c79e;
     color: #285531;
     position: fixed;
-    top: 97px;
+    top: 94px;
     width: 100%;
     /* display: none; */
 }
@@ -574,6 +580,21 @@ color: #285531;
     text-decoration: underline!important;
     color: #285531!important;
 }
+.news-container img{
+    min-width: 120px;
+}
+@media (max-width: 2576px) {
+    .footer-bottom p{
+        display: flex!important;
+        justify-content: flex-end!important;
+    }
+    .footer-bottom ul{
+        display: flex!important;
+        justify-content: flex-end!important;
+    }
+}
+
+
 
 @media  (max-width: 991px) {
     .col-md-4{
@@ -597,18 +618,37 @@ color: #285531;
         justify-content: center!important;
         padding-left: 30px!important;
     }
+    .footer-bottom p{
+        display: flex!important;
+        justify-content: center!important;
+        text-align: center;
+    }
+    .footer-bottom ul{
+        display: flex!important;
+        justify-content: center!important;
+        flex-direction: column;
+    }
+    .line3{
+        display: none;
+    }
     .socialmedia{
         display: flex;
         justify-content: center;
     }
     .input-group{
         display: flex;
-        flex-wrap: column!important;
+        flex-direction: column;
         align-items: center!important;
         justify-content: space-evenly;
         gap: 4px!important;
     }
     .input-group input{
         min-width: 200px!important;
+    }
+    .szechenyi{
+        position: fixed;
+        bottom: 0px;
+        right: 0px;
+        width: 150px;
     }
     }
