--- a/style5.css
+++ b/style5.css
@@ -79,7 +79,7 @@ body{
           }
            .bottom-navbar{
             position: relative;
-            top: 45px!important;
+            top: 43px!important;
            }
            
  }
@@ -114,7 +114,7 @@ body{
            }
            .bottom-navbar{
             position: relative;
-            top: 45px!important;
+            top: 43px!important;
            }
            .logo_main img{
             width: 120px!important;
@@ -177,6 +177,9 @@ body{
         }
         .logo_main img{
             width: 120px!important;
+        }
+        .search-container{
+            top: 45px!important;
         }
  }
 a{
@@ -322,6 +325,28 @@ font-weight: bold;
     background-color: #e38a40!important;
     font-weight: bold!important;
     border: none!important;
+}
+
+.search-container{
+    padding-top: 70px;
+    padding-bottom: 70px;
+    background-color: #b4c79e;
+    color: #285531;
+    position: fixed;
+    top: 94px;
+    width: 100%;
+    /* display: none; */
+}
+.search-container span{
+    font-size: 10px;
+    color: #285531;
+}
+.search-container button{
+    background-color: #285531;
+}
+.search-container a {
+    text-decoration: none!important;
+    color: #285531;
 }
 
 /* Hero */
@@ -611,12 +636,20 @@ color: #285531;
     padding-top: 3px;
     padding-bottom: 3px;
     padding-left: 30px;
-    min-width: 150px;
+    min-width: 190px;
   }
 
   @media (max-width: 2576px) {
     .selectmenu label{
         font-size: 30px;
+    }
+    .footer-bottom p{
+        display: flex!important;
+        justify-content: flex-end!important;
+    }
+    .footer-bottom ul{
+        display: flex!important;
+        justify-content: flex-end!important;
     }
   }
 
@@ -659,8 +692,37 @@ color: #285531;
         justify-content: center!important;
         padding-left: 30px!important;
     }
+    .footer-bottom p{
+        display: flex!important;
+        justify-content: center!important;
+        text-align: center;
+    }
+    .footer-bottom ul{
+        display: flex!important;
+        justify-content: center!important;
+        flex-direction: column;
+    }
+    .line3{
+        display: none;
+    }
     .socialmedia{
         display: flex;
         justify-content: center;
+    }
+    .input-group{
+        display: flex;
+        flex-direction: column;
+        align-items: center!important;
+        justify-content: space-evenly;
+        gap: 4px!important;
+    }
+    .input-group input{
+        min-width: 200px!important;
+    }
+    .szechenyi{
+        position: fixed;
+        bottom: 0px;
+        right: 0px;
+        width: 150px;
     }
     }
