--- a/style.css
+++ b/style.css
@@ -28,6 +28,16 @@ body{
 
   }
   @media(max-width:1200px){
+    .top-menu{
+        top: 0!important;
+        display: block!important;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .navbar,.fixed-top{
+        position: fixed;
+        top: 25px!important;
+    }
     .left,.right,.bottom-navbar,.left-bottom-navbar,.right-bottom-navbar{
         display: none;
     }
@@ -705,4 +715,18 @@ a {
     display: flex;
     color: white;
     margin: 0!important;
+}
+
+.top-menu{
+    background-color: #285531;
+    width: 100%;
+position: fixed;
+top: 250px;
+z-index: 10;
+padding-left: 15px;
+padding-right: 15px;
+display: none;
+}
+.top-menu ul{
+    list-style-type: none;
 }
