--- a/style2.css
+++ b/style2.css
@@ -169,6 +169,16 @@ body{
         .search-container{
             top: 45px!important;
         }
+        .top-menu{
+            top: 0!important;
+            display: block!important;
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+        .navbar,.fixed-top{
+            position: fixed;
+            top: 25px!important;
+        }
 
  }
 
@@ -180,7 +190,7 @@ body{
    .top-navbar li {
     font-size: 15px;
    }
-   .top-navbar svg{
+   .top-navbar svg,.top-menu svg{
     padding: 3px;
    }
    .bottom-navbar a {
@@ -550,4 +560,18 @@ align-items: flex-end;
     right: 0px;
     width: 150px;
 }
+}
+
+.top-menu{
+    background-color: #0d572d;
+    width: 100%;
+position: fixed;
+top: 250px;
+z-index: 10;
+padding-left: 15px;
+padding-right: 15px;
+display: none;
+}
+.top-menu ul{
+    list-style-type: none;
 }
