--- a/style3.css
+++ b/style3.css
@@ -182,6 +182,17 @@ body{
             padding-bottom: 0!important;
         }
 
+        .top-menu{
+            top: 0!important;
+            display: block!important;
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+        .navbar,.fixed-top{
+            position: fixed;
+            top: 25px!important;
+        }
+
  }
  .imagetest{
     background-image: url(images/Layer\ 121.png);
@@ -210,8 +221,9 @@ a{
    .top-navbar li {
     font-size: 15px;
    }
-   .top-navbar svg{
+   .top-navbar svg, .top-menu svg{
     padding: 3px;
+    color: white;
    }
    .bottom-navbar a {
     font-size: 15px;
@@ -595,4 +607,18 @@ align-items: flex-end;
         right: 0px;
         width: 150px;
     }
+    }
+
+    .top-menu{
+        background-color: #0d572d;
+        width: 100%;
+    position: fixed;
+    top: 250px;
+    z-index: 10;
+    padding-left: 15px;
+    padding-right: 15px;
+    display: none;
+    }
+    .top-menu ul{
+        list-style-type: none;
     }
