--- a/style4.css
+++ b/style4.css
@@ -192,6 +192,17 @@ body{
         .cotenttwo-reverse button{
             font-size: 15px!important;
             }
+
+            .top-menu{
+                top: 0!important;
+                display: block!important;
+                padding-top: 10px;
+                padding-bottom: 10px;
+            }
+            .navbar,.fixed-top{
+                position: fixed;
+                top: 25px!important;
+            }
  }
 a{
     text-decoration: none!important;
@@ -215,8 +226,9 @@ a{
    .top-navbar li {
     font-size: 15px;
    }
-   .top-navbar svg{
+   .top-navbar svg, .top-menu svg{
     padding: 3px;
+    color: white;
    }
    .bottom-navbar a {
     font-size: 15px;
@@ -661,4 +673,18 @@ color: #285531;
         right: 0px;
         width: 150px;
     }
+    }
+
+    .top-menu{
+        background-color: #0d572d;
+        width: 100%;
+    position: fixed;
+    top: 250px;
+    z-index: 10;
+    padding-left: 15px;
+    padding-right: 15px;
+    display: none;
+    }
+    .top-menu ul{
+        list-style-type: none;
     }
