--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ body{
            }
            .top-navbar,.top-menu svg{
             padding: 3px;
+            padding-bottom: 4px;
            }
            .line{
             border-right: 2px solid white;
@@ -300,7 +301,7 @@ body{
     top: 87px;
 }
 .navbar {
-    background-color: #285531;
+    background-color: #0d572d;
     display: flex;
     position: absolute;
     top: 0;
@@ -316,7 +317,7 @@ display: flex;
 justify-content: space-between;
 width: 100%;
 margin-right: 25px;
-background-color: #285531;
+background-color: #0d572d;
 }
 
 .left ul {
@@ -355,7 +356,7 @@ background-color: #285531;
   box-shadow: none !important;
 }
 .offcanvas{
-    background-color: #285531!important;
+    background-color: #0d572d!important;
 }
 
 .bottom-navbar{
