--- a/style3.css
+++ b/style3.css
@@ -223,6 +223,7 @@ a{
    }
    .top-navbar svg, .top-menu svg{
     padding: 3px;
+    padding-bottom: 4px;
     color: white;
    }
    .bottom-navbar a {
@@ -255,7 +256,7 @@ a{
     top: 87px;
 }
 .navbar {
-    background-color: #285531;
+    background-color: #0d572d;
     display: flex;
     position: absolute;
     top: 0;
@@ -271,7 +272,7 @@ display: flex;
 justify-content: space-between;
 width: 100%;
 margin-right: 25px;
-background-color: #285531;
+background-color: #0d572d;
 }
 
 .left ul {
@@ -310,7 +311,7 @@ background-color: #285531;
   box-shadow: none !important;
 }
 .offcanvas{
-    background-color: #285531!important;
+    background-color: #0d572d!important;
 }
 
 .bottom-navbar{
