--- a/style4.css
+++ b/style4.css
@@ -228,6 +228,7 @@ a{
    }
    .top-navbar svg, .top-menu svg{
     padding: 3px;
+    padding-bottom: 4px;
     color: white;
    }
    .bottom-navbar a {
@@ -260,7 +261,7 @@ a{
     top: 87px;
 }
 .navbar {
-    background-color: #285531;
+    background-color: #0d572d;
     display: flex;
     position: absolute;
     top: 0;
@@ -276,7 +277,7 @@ display: flex;
 justify-content: space-between;
 width: 100%;
 margin-right: 25px;
-background-color: #285531;
+background-color: #0d572d;
 }
 
 .left ul {
@@ -316,7 +317,7 @@ background-color: #285531;
   box-shadow: none !important;
 }
 .offcanvas{
-    background-color: #285531!important;
+    background-color: #0d572d!important;
 }
 
 .bottom-navbar{
