--- a/style5.css
+++ b/style5.css
@@ -215,6 +215,7 @@ a{
    }
    .top-navbar svg, .top-menu svg{
     padding: 3px;
+    padding-bottom: 4px;
     color: white;
    }
    .bottom-navbar a {
@@ -247,7 +248,7 @@ a{
     top: 87px;
 }
 .navbar {
-    background-color: #285531;
+    background-color: #0d572d;
     display: flex;
     position: absolute;
     top: 0;
@@ -263,7 +264,7 @@ display: flex;
 justify-content: space-between;
 width: 100%;
 margin-right: 25px;
-background-color: #285531;
+background-color: #0d572d;
 }
 
 .left ul {
@@ -303,7 +304,7 @@ background-color: #285531;
   box-shadow: none !important;
 }
 .offcanvas{
-    background-color: #285531!important;
+    background-color: #0d572d!important;
 }
 
 .bottom-navbar{
