--- a/style2.css
+++ b/style2.css
@@ -59,22 +59,22 @@ body{
 
  @media (max-width: 2576px) {
     h1{
-        font-size: 50px!important;
+        font-size: 48px!important;
         font-weight: bolder!important;
      }
      p{
-        font-size: 20px!important;
+        font-size: 18px!important;
      }
      h5{
-        font-size: 23px!important;
+        font-size: 21px!important;
         font-weight: bold!important;
         color: #285531!important;
      }
      h6{
-        font-size: 18px!important;
+        font-size: 16px!important;
      }
      .contentthree-container ul,li{
-        font-size: 23px;
+        font-size: 21px;
         }
         .image-content{
             max-width: 100vh!important;
@@ -88,28 +88,28 @@ body{
  
  @media (min-width: 992px) and (max-width: 1440px) {
     h1{
-        font-size: 30px!important;
+        font-size: 28px!important;
         font-weight: bolder!important;
      }
      p{
         font-size: 15px!important;
      }
      h5{
-        font-size: 18px!important;
+        font-size: 16px!important;
         font-weight: bold!important;
         color: #285531!important;
      }
      h6{
-        font-size: 15px!important;
+        font-size: 13px!important;
      }
      .button-main {
-        font-size: 20px!important;
+        font-size: 18px!important;
      }
      .footer-right p {
         font-size: 15px!important;
      }
      .contentthree-container ul,li{
-        font-size: 18px;
+        font-size: 16px;
         }
         .image-content{
             min-height: 50%;
@@ -126,19 +126,19 @@ body{
 
  @media  (max-width: 991px) {
     h1{
-        font-size: 30px!important;
+        font-size: 28px!important;
         font-weight: bolder!important;
      }
      p{
-        font-size: 15px!important;
+        font-size: 13px!important;
      }
      h5{
-        font-size: 20px!important;
+        font-size: 15px!important;
         font-weight: bold!important;
         color: #285531!important;
      }
      h6{
-        font-size: 18px!important;
+        font-size: 13px!important;
      }
      .box.arrow-right:after{
         display: none;
@@ -157,7 +157,7 @@ body{
         font-size: 15px!important;
      }
      .contentthree-container ul,li{
-        font-size: 18px;
+        font-size: 16px;
         }
         .image-content{
             max-width: 90%!important;
@@ -185,17 +185,17 @@ body{
 
 /* Navbar */
 .top-navbar a {
-    font-size: 15px;
+    font-size: 13px;
    }
    .top-navbar li {
-    font-size: 15px;
+    font-size: 13px;
    }
    .top-navbar svg,.top-menu svg{
     padding: 3px;
     padding-bottom: 4px;
    }
    .bottom-navbar a {
-    font-size: 15px;
+    font-size: 13px;
    }
    .bottom-navbar ul{
     margin: 0;
@@ -451,7 +451,7 @@ color: #285531;
     padding-left: 0;
 }
 .footeraccept{
-    font-size: 12px;
+    font-size: 10px;
 }
 .footer-bottom p{
     font-size: 13px!important;
@@ -472,7 +472,7 @@ color: #285531;
     background-color: #285531!important;
 }
 .footer a{
-    font-size: 15px!important;
+    font-size: 13px!important;
 }
 
 a{
@@ -575,4 +575,7 @@ display: none;
 }
 .top-menu ul{
     list-style-type: none;
+}
+button{
+    font-size: 14px!important;
 }
