--- a/style3.css
+++ b/style3.css
@@ -53,22 +53,22 @@ body{
 
  @media (max-width: 2576px) {
     h1{
-        font-size: 50px!important;
+        font-size: 48px!important;
         font-weight: bolder!important;
      }
      p{
-        font-size: 20px!important;
+        font-size: 18px!important;
      }
      h5{
-        font-size: 23px!important;
+        font-size: 21px!important;
         font-weight: bold!important;
         color: #285531!important;
      }
      h6{
-        font-size: 20px!important;
+        font-size: 16px!important;
      }
      .contentthree-container ul,li{
-        font-size: 23px;
+        font-size: 21px;
         }
 
            .bottom-navbar{
@@ -87,11 +87,11 @@ body{
         padding-left: 100px!important;
     }
     h1{
-        font-size: 35px!important;
+        font-size: 28px!important;
         font-weight: bolder!important;
      }
      p{
-        font-size: 18px!important;
+        font-size: 15px!important;
      }
      h5{
         font-size: 16px!important;
@@ -99,16 +99,16 @@ body{
         color: #285531!important;
      }
      h6{
-        font-size: 15px!important;
+        font-size: 13px!important;
      }
      .button-main {
-        font-size: 20px!important;
-     }
-     .footer-right p {
         font-size: 18px!important;
      }
+     .footer-right p {
+        font-size: 15px!important;
+     }
      .contentthree-container ul,li{
-        font-size: 18px;
+        font-size: 16px;
         }
         .image-content{
             min-height: 50%;
@@ -126,19 +126,19 @@ body{
 
  @media  (max-width: 991px) {
     h1{
-        font-size: 30px!important;
+        font-size: 28px!important;
         font-weight: bolder!important;
      }
      p{
-        font-size: 15px!important;
+        font-size: 13px!important;
      }
      h5{
-        font-size: 17px!important;
+        font-size: 15px!important;
         font-weight: bold!important;
         color: #285531!important;
      }
      h6{
-        font-size: 15px!important;
+        font-size: 13px!important;
      }
      .box.arrow-right:after{
         display: none;
@@ -164,7 +164,7 @@ body{
         font-size: 15px!important;
      }
      .contentthree-container ul,li{
-        font-size: 18px;
+        font-size: 16px;
         }
  
            .page1{
@@ -216,10 +216,10 @@ a{
 
 /* Navbar */
 .top-navbar a {
-    font-size: 15px;
+    font-size: 13px;
    }
    .top-navbar li {
-    font-size: 15px;
+    font-size: 13px;
    }
    .top-navbar svg, .top-menu svg{
     padding: 3px;
@@ -227,7 +227,7 @@ a{
     color: white;
    }
    .bottom-navbar a {
-    font-size: 15px;
+    font-size: 13px;
    }
    .bottom-navbar ul{
     margin: 0;
@@ -521,7 +521,7 @@ color: #285531;
     color: white!important;
 }
 .footer a{
-    font-size: 15px!important;
+    font-size: 13px!important;
 }
 .footer-bottom p{
     font-size: 13px!important;
@@ -622,4 +622,10 @@ align-items: flex-end;
     }
     .top-menu ul{
         list-style-type: none;
+    }
+    button{
+        font-size: 15px!important;
+    }
+    button{
+        font-size: 14px!important;
     }
