--- a/style4.css
+++ b/style4.css
@@ -53,19 +53,19 @@ body{
 
  @media (max-width: 2576px) {
     h1{
-        font-size: 40px!important;
+        font-size: 48px!important;
         font-weight: bolder!important;
      }
      p{
-        font-size: 20px!important;
+        font-size: 18px!important;
      }
      h5{
-        font-size: 23px!important;
+        font-size: 21px!important;
         font-weight: bold!important;
         color: #285531!important;
      }
      h6{
-        font-size: 18px!important;
+        font-size: 16px!important;
      }
      .contentthree-container ul,li{
         font-size: 20px;
@@ -91,11 +91,11 @@ body{
         height: 127px;
     }
     h1{
-        font-size: 35px!important;
+        font-size: 28px!important;
         font-weight: bolder!important;
      }
      p{
-        font-size: 18px!important;
+        font-size: 15px!important;
      }
      h5{
         font-size: 16px!important;
@@ -103,16 +103,16 @@ body{
         color: #285531!important;
      }
      h6{
-        font-size: 15px!important;
+        font-size: 13px!important;
      }
      .button-main {
-        font-size: 20px!important;
+        font-size: 18px!important;
      }
      .footer-right p {
         font-size: 15px!important;
      }
      .contentthree-container ul,li{
-        font-size: 18px;
+        font-size: 16px;
         }
         .image-content{
             min-height: 50%;
@@ -133,19 +133,19 @@ body{
         height: 127px;
     }
     h1{
-        font-size: 30px!important;
+        font-size: 28px!important;
         font-weight: bolder!important;
      }
      p{
-        font-size: 15px!important;
+        font-size: 13px!important;
      }
      h5{
-        font-size: 16px!important;
+        font-size: 15px!important;
         font-weight: bold!important;
         color: #285531!important;
      }
      h6{
-        font-size: 15px!important;
+        font-size: 13px!important;
      }
      .box.arrow-right:after{
         display: none;
@@ -164,7 +164,7 @@ body{
         font-size: 15px!important;
      }
      .contentthree-container ul,li{
-        font-size: 18px;
+        font-size: 16px;
         }
 
         .image-content {
@@ -221,10 +221,10 @@ a{
 
 
 .top-navbar a {
-    font-size: 15px;
+    font-size: 13px;
    }
    .top-navbar li {
-    font-size: 15px;
+    font-size: 13px;
    }
    .top-navbar svg, .top-menu svg{
     padding: 3px;
@@ -232,7 +232,7 @@ a{
     color: white;
    }
    .bottom-navbar a {
-    font-size: 15px;
+    font-size: 13px;
    }
    .bottom-navbar ul{
     margin: 0;
@@ -509,7 +509,7 @@ color: #285531;
     font-size: 12px;
 }
 .footer-bottom{
-    font-size: 15px;
+    font-size: 13px;
 }
 .footer-bottom ul{
     margin: 0;
@@ -528,7 +528,7 @@ color: #285531;
     padding-right: 15px;
 }
 .footer-bottom p{
-    font-size: 15px!important;
+    font-size: 13px!important;
 }
 .footer a {
     text-decoration: none!important;
@@ -539,7 +539,7 @@ color: #285531;
     background-color: #285531!important;
 }
 .footer a{
-    font-size: 15px!important;
+    font-size: 13px!important;
 }
 .footer-bottom p{
     font-size: 13px!important;
@@ -688,4 +688,7 @@ color: #285531;
     }
     .top-menu ul{
         list-style-type: none;
+    }
+    .bottom-navbar button{
+        font-size: 14px!important;
     }
